# PulseAI

./: .env.example  .env.local.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  Level1.ipynb  Level2.ipynb  Level3.ipynb  Level4.ipynb  Level5.ipynb  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  architecture.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.ts  test_gemini.py  tsconfig.json
app/: config.py  daily_runner.py  globals.css  layout.tsx  page.tsx  runner.py
app/agent/: curator_agent.py  digest_agent.py  email_agent.py
app/api/chat/: route.ts
app/assistant/: page.tsx
app/database/: models.py  repository.py
app/profiles/: user_profile.py
app/recognize/: page.tsx
app/register/: page.tsx
app/scrapers/: deepseek.py  gemini.py  youtube.py
app/services/: process_digest.py  process_email.py
app/users/: page.tsx
components/: chat-message.tsx  nav-header.tsx  robot-avatar.tsx  webcam-capture.tsx
components/ui/: button.tsx  card.tsx  input.tsx  label.tsx  spinner.tsx
lib/: face-recognition.ts  storage.ts  types.ts  use-speech-to-text.ts  use-text-to-speech.ts  utils.ts
public/models/: README.md
scripts/: download-models.bat  download-models.js  download-models.sh
