[project]
name = "terafac-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "feedparser>=6.0.12",
    "google-generativeai>=0.8.6",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
